--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/wine.png" alt="" /></a>
-									<p>Suggested five wine combinations with 11 chemical features.</p>
+									<p>Suggested five wine combinations with 11 chemical features. Cleaned, pre-processed, and created data visualizations to examine the relationship between each chemical characteristic of the wine type and performance.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/yl540016/PortfolioProjects/blob/main/WineQualityAnalysis.ipynb" class="button">View Project</a></li>
 									</ul>
