--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Yoojin Lee's Portfolio<br />
 						</h1>
-						<p>Aspiring Data Scientist and a senior at Columbia University majoring in Data Science. <a href="https://html5up.net"></a><br />
+						<p>Aspiring Data Analyst and a senior at Columbia University majoring in Data Science. <a href="https://html5up.net"></a><br />
 						 <a href="https://html5up.net/license"></a></p>
 						 <ul class="icons">
 						<li><a href="https://www.linkedin.com/in/yoojinleeee/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
