--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								
+								<!-- Customer Shopping Dataset-->	
+								<article>
+									<header>
+										<span class="date">Numpy, Pandas, Seaborn, Matplotlib, Statsmodel</span>
+										<h2><a href="#">Retail Sales Data EDA<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/store.png" alt="" /></a>
+									<p>Perfomed data visualization and exploration on a customer shopping dataset obtained from kaggle. Performed EDA using various visualiztion techniques, did clustering techniques after converting categorical colums to numerical and standardizing the data, followed by applying clustering algorithms. </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/yl540016/PortfolioProjects/blob/main/Customer_Dataset_Explore_Data_Analysis.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
 
 								<!-- Wine Quality Analysis-->	
 								<article>
