--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<!-- Customer Shopping Dataset-->	
 								<article>
 									<header>
-										<span class="date">Numpy, Pandas, Seaborn, Matplotlib, Statsmodel</span>
+										<span class="date">Scikit-learn, Numpy, Pandas, Seaborn, Matplotlib</span>
 										<h2><a href="#">Retail Sales Data EDA<br />
 										</a></h2>
 									</header>
