--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/store.png" alt="" /></a>
-									<p>Perfomed data visualization and exploration on a customer shopping dataset obtained from kaggle. Performed EDA using various visualiztion techniques, did clustering techniques after converting categorical colums to numerical and standardizing the data, followed by applying clustering algorithms. </p>
+									<p>Perfomed data visualization and exploration on a customer shopping dataset obtained from kaggle. Performed EDA using various visualiztion techniques, did clustering techniques after converting categorical columns to numerical and standardizing the data, followed by applying clustering algorithms. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/yl540016/PortfolioProjects/blob/main/Customer_Dataset_Explore_Data_Analysis.ipynb" class="button">View Project</a></li>
 									</ul>
